Fixed spacing in title

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,13 +14,17 @@ body {
 
 h1 {
     font-size: 40px;
+    margin-bottom: 15px;
 }
 
 #title {
     text-align: center;
-    line-height: 45px;
     margin: 50px auto;
     font-size: 20px;
+}
+
+#title p {
+    line-height: 25px;
 }
 
 #all-questions-div {
